--- a/HedgeNodePlugin/HedgeNodePlugin.vcxproj.filters
+++ b/HedgeNodePlugin/HedgeNodePlugin.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Source\Util\hString.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Beans\HedgeLobby.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Exports.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Networking\Model\NetworkDataTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Beans\HedgeLobby.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
