Fixed some session stuff.

--- a/HedgeNodePlugin/HedgeNodePlugin.vcxproj
+++ b/HedgeNodePlugin/HedgeNodePlugin.vcxproj
@@ -108,6 +108,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <TargetExt>.Red32n</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
